fix broken style

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -441,6 +441,7 @@ input[type="password"] {
 .animate-flicker {
   h2 {
     font-family: "Cookie", serif;
+    font-size: 2em;
     animation: flickerAnimation 1.5s infinite;
   }
 }
